--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,10 +7,13 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.7",
+    "chart.js": "^3.9.1",
+    "detect-port-alt": "^1.1.6",
     "react": "^18.3.1",
+    "react-chartjs-2": "^4.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.28.0",
-    "react-scripts": "^3.0.1",
+    "react-scripts": "^3.4.4",
     "util.promisify": "^1.1.2",
     "web-vitals": "^2.1.4"
   },
@@ -37,5 +40,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/preset-env": "^7.26.0",
+    "babel-loader": "^8.1.0"
   }
 }
